# sandbox_github

./: linear_regression_insurance.py  pyproject.toml
boosting_from_scratch/: boosting.py  pyproject.toml
decision_tree/: decision_tree_classifier_from_scratch.py  decision_tree_regressor_from_scratch.py
decision_tree_from_scratch/: decision_tree_classifier.py  decision_tree_regressor.py  pyproject.toml
k_means_from_scratch/: k_means.py  pyproject.toml
linear_regression/: lin_reg_insurance_costs.py
python_coding_problems/: bernoulli_matrix.py  data_transformation_pandas.py  fibonacci.py  find_median_unsorted_array.py  matrix_multiplication.py  merge_two_list.py  monotonic_array.py  python_model_ml.py  roll_dice.py  valid_palindrome.py
