[tool.poetry]
name = "sandbox_github"
version = "0.1.0"
description = ""
authors = ["Olivia Sliz <olivia.sliz@mgb.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.3"
gcsfs = "^2021.10.0"
sns = "^0.1"
seaborn = "^0.11.2"
numpy = "^1.21.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
