[tool.poetry]
name = "boosting_from_scratch"
version = "0.1.0"
description = ""
authors = ["Olivia Sliz <olivia.sliz@mgb.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
