[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Olivia Sliz <olivia.sliz@mgb.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
