[tool.poetry]
name = "k_means_from_scratch"
version = "0.1.0"
description = ""
authors = ["Olivia Sliz <olivia.sliz@mgb.ch>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
